# actix-crud

./: .env.exemple  .gitignore  Cargo.toml  readme.md  thunder-collection_actix-crud.json
src/: controller.rs  main.rs  models.rs  postgres.rs  services.rs
src/configs/: postgres.rs
src/modules/posts/: handlers.rs  mod.rs  model.rs  services.rs
