[package]
name = "actix-crud"
version = "0.1.0"
edition = "2021"


[dependencies]
actix-web = "4"
serde = { version = "1.0", features = ["derive"] }
diesel = { version = "2.0.0", features = ["postgres"] }
dotenvy = "0.15"
lazy_static = "1.4.0"
mockall = "0.11.2"

[dev-dependencies]
mockall = "0.11.2"